--- a/TdsGlobal.config
+++ b/TdsGlobal.config
@@ -34,8 +34,8 @@
 		-->
     <!-- Deployment Properties -->
 
-    <SitecoreWebUrl>https://sc101.verndale-local.com</SitecoreWebUrl>
-    <SitecoreDeployFolder>C:\inetpub\wwwroot\sc101.verndale-local.com</SitecoreDeployFolder>
+    <SitecoreWebUrl>https://siplast.verndale-local.com</SitecoreWebUrl>
+    <SitecoreDeployFolder>C:\inetpub\wwwroot\siplast.verndale-local.com</SitecoreDeployFolder>
     <RecursiveDeployAction></RecursiveDeployAction>
     <InstallSitecoreConnector>true</InstallSitecoreConnector>
     <SitecoreAccessGuid>4d51ebe4-e410-49e2-93de-e2e1b19aa46b</SitecoreAccessGuid>
