Fix References and Build SC Package

--- a/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.config
+++ b/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.config
@@ -1,8 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore>
+    <pipelines>
+      <initialize>
+        <processor
+          type="Constellation.Foundation.PackageVerification.Pipelines.Initialize.PackageVerifier, Constellation.Foundation.PackageVerification"
+          role:require="Standalone or ContentManagement" />
+      </initialize>
+    </pipelines>
     <services>
       <configurator type="SitecoreModules.Foundation.Forms.ServiceRegistration, SitecoreModules.Foundation.Forms"/>
     </services>
+    <packageVerifier
+      defaultProcessorType="Constellation.Foundation.PackageVerification.PackageProcessor, Constellation.Foundation.PackageVerification"
+      defaultInstallMode="Merge"
+      defaultMergeMode="Clear"
+    >
+      <package name="SitecoreModules-Foundation-Forms" packageFileName="SitecoreModules-Foundation-Forms-10.2.0.2207301.zip" installMode="Merge" mergeMode="Clear" processorOverrideType="">
+        <artifact id="{4BF736A9-DBF2-41C3-BEA2-13D7885EADD9}" database="master"/>
+      </package>
+
+    </packageVerifier>
   </sitecore>
 </configuration>
