ReCaptcha Standard Support

--- a/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.ReCaptchaEnterprise.nonprod.config.example
+++ b/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.ReCaptchaEnterprise.nonprod.config.example
@@ -2,12 +2,26 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:env="http://www.sitecore.net/xmlconfig/env/">
   <sitecore>
     <settings env:require="Local">
+      <!--  For Enterprise Version  -->
       <setting name="Foundation.Forms.ReCaptchaEnterprise.Api.Url" value="https://www.google.com/recaptcha/enterprise.js?render={0}" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.Api.SiteVerify" value="https://recaptchaenterprise.googleapis.com/v1/projects/[PROJECT_ID]/assessments?key={0}" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV3" value="[PUBLIC_KEY_V3]" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV2" value="[PUBLIC_KEY_V2]" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.ApiKey" value="[API_KEY_V3]" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.Score" value="0.5" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.IsStandard" value="false" />
+
+      <!-- 
+      For Standard Version
+      
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.Api.Url" value="https://www.google.com/recaptcha/api.js?render={0}" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.Api.SiteVerify" value="https://www.google.com/recaptcha/api/siteverify" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV3" value="[PUBLIC_KEY_V3]" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV2" value="[PUBLIC_KEY_V2]" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.ApiKey" value="[NOT REQUIRED FOR STANDARD]" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.Score" value="0.5" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.IsStandard" value="true" />
+     -->
     </settings>
   </sitecore>
 </configuration>
