--- a/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.ReCaptchaEnterprise.nonprod.config.example
+++ b/src/code/SitecoreModules.Foundation.Forms/App_Config/Include/Foundation/SitecoreModules.Foundation.Forms.ReCaptchaEnterprise.nonprod.config.example
@@ -18,7 +18,8 @@
       <setting name="Foundation.Forms.ReCaptchaEnterprise.Api.SiteVerify" value="https://www.google.com/recaptcha/api/siteverify" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV3" value="[PUBLIC_KEY_V3]" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.PublicKeyV2" value="[PUBLIC_KEY_V2]" />
-      <setting name="Foundation.Forms.ReCaptchaEnterprise.ApiKey" value="[NOT REQUIRED FOR STANDARD]" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.ApiSecretV2" value="[SECRET_KEY_V2]" />
+      <setting name="Foundation.Forms.ReCaptchaEnterprise.ApiSecretV3" value="[SECRET_KEY_V3]" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.Score" value="0.5" />
       <setting name="Foundation.Forms.ReCaptchaEnterprise.IsStandard" value="true" />
      -->
