--- a/src/code/SitecoreModules.Foundation.Forms/SitecoreModules.Foundation.Forms.csproj
+++ b/src/code/SitecoreModules.Foundation.Forms/SitecoreModules.Foundation.Forms.csproj
@@ -14,6 +14,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
     <WebGreaseLibPath>..\..\..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -405,7 +406,7 @@
   <ItemGroup>
     <Content Include="App_Data\packages\PutPackagesHere.txt" />
     <Content Include="Constellation.License.txt" />
-    <Content Include="sitecore modules\Web\ExpericeForms\scripts\forms.recaptcha.js" />
+    <Content Include="sitecore modules\Web\ExperienceForms\scripts\forms.recaptcha.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -415,7 +416,7 @@
     <None Include="App_Config\Include\Foundation\Constellation.Foundation.PackageVerification.config.example" />
     <None Include="packages.config" />
     <None Include="SitecoreModules.Foundation.Forms.nuspec" />
-    <Content Include="sitecore modules\Web\ExpericeForms\scripts\forms.recaptcha.standard.js" />
+    <Content Include="sitecore modules\Web\ExperienceForms\scripts\forms.recaptcha.standard.js" />
     <Content Include="Views\FormBuilder\ReCaptcha\ReCaptchaEnterprise.cshtml" />
   </ItemGroup>
   <ItemGroup />
